// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders an error if loading failed 1`] = `
<div
  class="Home"
>
  <p>
    Oops, Failed to load list!
  </p>
</div>
`;

exports[`<Home /> renders the <List /> if loading was successful 1`] = `
<div
  class="Home"
>
  <div
    class="UserList"
  >
    <h4>
      User List
    </h4>
    <ul>
      <li>
        <a
          href="/UserInfo/1"
        >
          Welly
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Home /> renders the loading status if data invalid 1`] = `
<div
  class="Home"
>
  <p>
    Loading...
  </p>
</div>
`;

exports[`<Home /> renders the loading status if requesting data 1`] = `
<div
  class="Home"
>
  <p>
    Loading...
  </p>
</div>
`;
